<resources>
    <string name="app_name">zhanghaoguanjia</string>
    <string name="choose">Choose</string>
    <string name="choose_app">Choose App</string>
    <string name="installed_app">Installed App</string>
    <string name="installed_module">Installed Module</string>
    <string name="empty_empty">Empty</string>
    <string name="filter">Filter</string>
    <string name="open_source_path">Open Source</string>
    <string name="xp_setting">Xposed Setting</string>
    <string name="tg_group">Telegram Group</string>
    <string name="fake_location">Fake Location(Preview)</string>
    <string name="real_location">Real Location</string>
    <string name="set_location">Set Fake Location Successfully:%s-%s</string>
    <string name="close_fake_location">Disable FakeLocation</string>
    <string name="close_app_fake_location">Disable FakeLocation for %s</string>
    <string name="close_fake_location_success">Disable FakeLocation for %s Successfully</string>
    <string name="setting">Setting</string>
    <string name="jump_module">Go to Module Manager</string>
    <string name="module_setting">Module Manager</string>
    <string name="enable_xposed">Enable Xposed Framework</string>
    <string name="hider">Hide</string>
    <string name="hide_root">Hide Root</string>
    <string name="hide_xposed">Hide Xposed</string>
    <string name="userRemark">User Remark</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="permission_setting">Setting</string>
    <string name="no_reminders">No Reminders</string>
    <string name="app_stop">Stop Running</string>
    <string name="app_stop_hint">Do you want to stop %s forcibly?</string>
    <string name="is_stop">%s is Stopped</string>
    <string name="app_clear">Clear Data</string>
    <string name="app_clear_hint">Clear Data for %s?</string>
    <string name="app_remove">Uninstall App</string>
    <string name="app_shortcut">Create Shortcut</string>
    <string name="shortcut_name">Shortcut Name</string>
    <string name="try_add_shortcut">Try Added To Desktop</string>
    <string name="add_shortcut_fail_msg">If the addition fails, please go to system settings and open the permission of "create desktop shortcut" for zhanghaoguanjia</string>
    <string name="install_success">Installed Successfully</string>
    <string name="install_fail">Installed Failed: %s</string>
    <string name="install_fail_no_msg">Installed Failed</string>
    <string name="uninstall_success">Uninstalled Successfully</string>
    <string name="uninstall_fail">Uninstalled Failed</string>
    <string name="uninstall_app">Uninstall App</string>
    <string name="uninstall_app_hint">Uninstall %s, and relevant data will be cleared after uninstallation?</string>
    <string name="uninstall_module">Uninstall Module</string>
    <string name="uninstall_module_hint">Do you want to uninstall this module? It will no longer work after uninstallation?</string>
    <string name="remove_success">Removed Successfully</string>
    <string name="clear_success">Cleared Successfully</string>
    <string name="start_fail">Launched Failed</string>
    <string name="start_in_outside">Start module in outside</string>
    <string name="restart_module">Restart app to apply change</string>
    <string name="cannot_create_shortcut">This desktop does not support creating shortcuts</string>
    <string name="uninstall_module_toast">Please uninstall the xposed module in the Module Manager</string>
    <string name="other">Others</string>
    <string name="daemon_enable">Daemon</string>
    <string name="use_vpn_network">Use VPN Network</string>
    <string name="use_vpn_network_summary">Route traffic through VPN for sandboxed apps (may improve network access)</string>
    <string name="disable_flag_secure">Disable Flag Secure</string>
    <string name="disable_flag_secure_summary">Allow screenshots and screen recording in apps</string>
    <string name="single_instance_mode">Single Instance Mode</string>
    <string name="single_instance_mode_summary">Only keep one clone app running at a time to save memory</string>
    <string name="gms_manager">GMS Manager</string>
    <string name="jump_gms">Go to Gms Manager</string>
    <string name="enable_gms">Enable Service</string>
    <string name="enable_gms_hint">Opening Google services can make youtube and other software that strongly rely on Google play services run normally.</string>
    <string name="disable_gms">Disable Service</string>
    <string name="disable_gms_hint">Clear the current Google service environment? Google service data will be cleared.</string>
    <string name="no_gms">Currently, there is no Google service environment on mobile phones.</string>
    <string name="duodian_app_name">账号管家</string>
    <string name="duodian_login_title">账号管家</string>
    <string name="duodian_login_subtitle">多平台店铺管理专家</string>
    <string name="duodian_phone_hint">请输入手机号</string>
    <string name="duodian_password_hint">请输入密码</string>
    <string name="show_password">显示密码</string>
    <string name="hide_password">隐藏密码</string>
    <string name="duodian_login_btn">登 录</string>
    <string name="duodian_register_link">注册账号</string>
    <string name="duodian_register_title">注册账号</string>
    <string name="duodian_register_subtitle">注册成功后，系统将赠送免费的订阅会员供您体验。</string>
    <string name="duodian_register_phone_label">手机号</string>
    <string name="duodian_register_username_label">用户名</string>
    <string name="duodian_register_password_label">登录密码</string>
    <string name="duodian_register_password_hint">请输入至少6位密码</string>
    <string name="duodian_register_bonus_hint">注册成功后请使用手机号和密码登录，赠送算力不可转赠。</string>
    <string name="duodian_login_empty">请输入手机号和密码</string>
    <string name="duodian_login_dev">登录功能开发中</string>
    <string name="duodian_tab_home">首页</string>
    <string name="duodian_tab_profile">我的</string>
    <string name="duodian_shop_list">店铺列表</string>
    <string name="duodian_add_shop">添加店铺</string>
    <string name="duodian_gift_center">福利中心</string>
    <string name="duodian_logs">操作日志</string>
    <string name="duodian_settings">设置</string>
    <string name="duodian_compute_balance">算力余额</string>
    <string name="duodian_remaining_days">剩余天数</string>
    <string name="duodian_auto_renew">自动续费</string>
    <string name="duodian_platform">平台</string>
    <string name="duodian_shop_id">店铺ID</string>
    <string name="profile_title">我的</string>
    <string name="gift_title">算力赠送</string>
    <string name="phone_gift_title">话费赠送</string>
    <string name="reclaim_title">算力取回</string>
    <string name="phone_reclaim_title">话费取回</string>
    <string name="logs_title">交易日志</string>
    <string name="menu_gift_compute">算力赠送</string>
    <string name="menu_reclaim_compute">算力取回</string>
    <string name="menu_gift_phone_minutes">话费赠送</string>
    <string name="menu_reclaim_phone_minutes">话费取回</string>
    <string name="menu_transaction_logs">交易日志</string>
    <string name="shop_feature_bad_review_location">差评定位</string>
    <string name="shop_feature_business_report">经营日报</string>
    <string name="shop_feature_outbound_praise">外呼好评</string>
    <string name="shop_feature_review_appeal">评价申诉</string>
    <string name="shop_feature_private_traffic">私域吸粉</string>
    <string name="shop_authorization_login">授权登录该店铺</string>
    <string name="shop_authorization_authorized">已授权</string>
    <string name="shop_authorization_retry">授权失败，重新授权</string>
    <string name="shop_authorization_title">店铺授权</string>
    <string name="shop_authorization_loading">正在连接授权窗口…</string>
    <string name="shop_authorization_load_failed">授权窗口加载失败，请确认内网服务器已启动</string>
    <string name="shop_feature_custom_line_placeholder">-</string>
    <string name="advanced_feature_unavailable">该功能暂未开放</string>
    <string name="advanced_feature_confirm_message">该功能为高级功能，继续开通每月将消耗%1$d点算力，是否继续开通？</string>
    <string name="advanced_feature_developing">该功能正在开发中</string>
    <string name="menu_change_username">修改用户名</string>
    <string name="menu_change_password">修改密码</string>
    <string name="menu_system_settings">软件设置</string>
    <string name="feedback_hint">请输入您遇到的问题...</string>
    <string name="feedback_submit">提交反馈</string>
    <string name="gift_target_phone">对方手机号</string>
    <string name="gift_amount">赠送数量</string>
    <string name="phone_gift_amount">赠送分钟</string>
    <string name="gift_confirm">确认赠送</string>
    <string name="gift_success">赠送成功</string>
    <string name="tab_all">全部</string>
    <string name="tab_out">转出</string>
    <string name="tab_in">转入</string>
    <string name="tab_consume">消耗</string>
    <string name="tab_phone_consume">话费消耗</string>
    <string name="edit_shop_title">编辑店铺</string>
    <string name="delete_shop_title">删除店铺</string>
    <string name="delete_shop_confirm">确定要删除该店铺吗？</string>
    <string name="delete_shop_warning">删除后无法恢复</string>
    <string name="edit_username_title">修改用户名</string>
    <string name="change_password_title">修改密码</string>
    <string name="save">保存</string>
    <string name="confirm">确认</string>
    <string name="confirm_delete">确认删除</string>
    <string name="username_hint">请输入用户名</string>
    <string name="old_password_hint">请输入原密码</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="confirm_password_hint">请确认新密码</string>
    <string name="error_username_empty">用户名不能为空</string>
    <string name="error_username_length">用户名长度需在1-32字符之间</string>
    <string name="error_password_empty">密码不能为空</string>
    <string name="error_password_length">密码长度至少6位</string>
    <string name="error_password_mismatch">两次输入的密码不一致</string>
    <string name="error_phone_invalid">请输入有效的11位手机号</string>
    <string name="error_amount_invalid">请输入有效的赠送数量</string>
    <string name="error_compute_transferable_insufficient">可转赠算力余额不足</string>
    <string name="error_phone_minutes_balance_insufficient">可赠送话费余额不足</string>
    <string name="submit_success">提交成功</string>
    <string name="save_success">保存成功</string>
    <string name="shop_name_hint">店铺名称</string>
    <string name="auto_renew_label">自动续时</string>
    <string name="gift_confirm_title">确认赠送</string>
    <string name="gift_confirm_target">对方手机号</string>
    <string name="gift_confirm_amount">赠送数量</string>
    <string name="gift_confirm_unit">算力</string>
    <string name="phone_minutes_unit">分钟</string>
    <string name="compute_gift_balance_label">可转赠算力</string>
    <string name="phone_gift_balance_label">可赠送话费</string>
    <string name="compute_gift_amount_hint">请输入赠送数量</string>
    <string name="phone_gift_amount_hint">请输入赠送分钟数</string>
    <string name="query">查询</string>
    <string name="querying">查询中</string>
    <string name="reclaim_action">取回</string>
    <string name="reclaim_receipt_title">取回小票</string>
    <string name="reclaim_receipt_phone">对方手机号</string>
    <string name="reclaim_receipt_time">交易发生时间</string>
    <string name="reclaim_receipt_gift_amount">转赠总数</string>
    <string name="reclaim_receipt_consumed">用户消耗算力</string>
    <string name="reclaim_receipt_phone_consumed">用户消耗话费</string>
    <string name="reclaim_receipt_already_reclaimed">已取回算力</string>
    <string name="reclaim_receipt_phone_already_reclaimed">已取回话费</string>
    <string name="reclaim_receipt_reclaimable">可取回算力</string>
    <string name="reclaim_receipt_phone_reclaimable">可取回话费</string>
    <string name="reclaim_compute_unit">%1$d 算力</string>
    <string name="reclaim_phone_minutes_unit">%1$d 分钟</string>
    <string name="reclaim_dialog_title">取回算力</string>
    <string name="reclaim_phone_dialog_title">取回话费</string>
    <string name="reclaim_dialog_amount">取回数量</string>
    <string name="reclaim_dialog_max_amount">最多可取回 %1$d 算力</string>
    <string name="reclaim_phone_dialog_max_amount">最多可取回 %1$d 分钟</string>
    <string name="reclaim_confirm">确认取回</string>
    <string name="reclaim_success_with_amount">已取回 %1$d 算力</string>
    <string name="reclaim_phone_success_with_amount">已取回 %1$d 分钟</string>
</resources>